@@ -23,7 +23,9 @@ static int vg_rename_path(struct cmd_context *cmd, const char *old_vg_path,
 	int consistent = 1;
 	int match = 0;
 	int found_id = 0;
+	int symlinks_refresh_ok = 1;
 	struct dm_list *vgids;
+	struct lv_list *lvl;
 	struct str_list *sl;
 	char *vg_name_new;
 	const char *vgid = NULL, *vg_name, *vg_name_old;
@@ -122,24 +124,33 @@ static int vg_rename_path(struct cmd_context *cmd, const char *old_vg_path,
 	/* Change the volume group name */
 	vg_rename(cmd, vg, vg_name_new);
 
+	/* store it on disks */
+	log_verbose("Writing out updated volume group");
+	if (!vg_write(vg) || !vg_commit(vg)) {
+		goto error;
+	}
+
 	sprintf(old_path, "%s%s", dev_dir, vg_name_old);
 	sprintf(new_path, "%s%s", dev_dir, vg_name_new);
 
 	if (activation() && dir_exists(old_path)) {
 		log_verbose("Renaming \"%s\" to \"%s\"", old_path, new_path);
+
 		if (test_mode())
 			log_verbose("Test mode: Skipping rename.");
-		else if (rename(old_path, new_path)) {
-			log_error("Renaming \"%s\" to \"%s\" failed: %s",
-				  old_path, new_path, strerror(errno));
-			goto error;
-		}
-	}
 
-	/* store it on disks */
-	log_verbose("Writing out updated volume group");
-	if (!vg_write(vg) || !vg_commit(vg)) {
-		goto error;
+		else if (lvs_in_vg_activated_by_uuid_only(vg)) {
+			dm_list_iterate_items(lvl, &vg->lvs)
+				if (lv_is_visible(lvl->lv))
+					if (!lv_refresh(cmd, lvl->lv))
+						symlinks_refresh_ok = 0;
+
+			if (!symlinks_refresh_ok) {
+				log_error("Renaming \"%s\" to \"%s\" failed", 
+					old_path, new_path);
+				goto error;
+			}
+		}
 	}
 
 /******* FIXME Rename any active LVs! *****/
